parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS expression
Rule 2     expression -> expression MINUS expression
Rule 3     expression -> expression TIMES expression
Rule 4     expression -> expression DIVIDE expression
Rule 5     expression -> expression POWER expression
Rule 6     expression -> LPAREN expression RPAREN
Rule 7     expression -> NUMBER
Rule 8     expression -> STRING
Rule 9     expression -> cell_ref
Rule 10    expression -> cell_range
Rule 11    cell_ref -> CELL_REF
Rule 12    cell_range -> CELL_REF COLON CELL_REF
Rule 13    expression -> SUM LPAREN arguments RPAREN
Rule 14    expression -> AVERAGE LPAREN arguments RPAREN
Rule 15    expression -> COUNT LPAREN arguments RPAREN
Rule 16    expression -> MAX LPAREN arguments RPAREN
Rule 17    expression -> MIN LPAREN arguments RPAREN
Rule 18    expression -> UNIQUE LPAREN arguments RPAREN
Rule 19    expression -> TODAY LPAREN RPAREN
Rule 20    expression -> NOW LPAREN RPAREN
Rule 21    expression -> YEAR LPAREN expression RPAREN
Rule 22    expression -> MONTH LPAREN expression RPAREN
Rule 23    expression -> DAY LPAREN expression RPAREN
Rule 24    expression -> CONCATENATE LPAREN arguments RPAREN
Rule 25    expression -> LEFT LPAREN expression COMMA NUMBER RPAREN
Rule 26    expression -> RIGHT LPAREN expression COMMA NUMBER RPAREN
Rule 27    expression -> MID LPAREN expression COMMA NUMBER COMMA NUMBER RPAREN
Rule 28    expression -> LEN LPAREN expression RPAREN
Rule 29    expression -> LOWER LPAREN expression RPAREN
Rule 30    expression -> UPPER LPAREN expression RPAREN
Rule 31    expression -> TRIM LPAREN expression RPAREN
Rule 32    expression -> FIND LPAREN expression COMMA expression COMMA NUMBER RPAREN
Rule 33    expression -> SEARCH LPAREN expression COMMA expression COMMA NUMBER RPAREN
Rule 34    expression -> REPLACE LPAREN expression COMMA NUMBER COMMA NUMBER COMMA expression RPAREN
Rule 35    expression -> SUBSTITUTE LPAREN expression COMMA expression COMMA expression COMMA NUMBER RPAREN
Rule 36    expression -> TEXT LPAREN expression COMMA STRING RPAREN
Rule 37    expression -> VALUE LPAREN expression RPAREN
Rule 38    expression -> PROPER LPAREN expression RPAREN
Rule 39    expression -> REPT LPAREN expression COMMA NUMBER RPAREN
Rule 40    expression -> EXACT LPAREN expression COMMA expression RPAREN
Rule 41    expression -> CHAR LPAREN NUMBER RPAREN
Rule 42    expression -> CODE LPAREN expression RPAREN
Rule 43    arguments -> arguments COMMA expression
Rule 44    arguments -> expression

Terminals, with rules where they appear

AVERAGE              : 14
CELL_REF             : 11 12 12
CHAR                 : 41
CODE                 : 42
COLON                : 12
COMMA                : 25 26 27 27 32 32 33 33 34 34 34 35 35 35 36 39 40 43
CONCATENATE          : 24
COUNT                : 15
DAY                  : 23
DIVIDE               : 4
EXACT                : 40
FIND                 : 32
LEFT                 : 25
LEN                  : 28
LOWER                : 29
LPAREN               : 6 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
MAX                  : 16
MID                  : 27
MIN                  : 17
MINUS                : 2
MONTH                : 22
NOW                  : 20
NUMBER               : 7 25 26 27 27 32 33 34 34 35 39 41
PLUS                 : 1
POWER                : 5
PROPER               : 38
REPLACE              : 34
REPT                 : 39
RIGHT                : 26
RPAREN               : 6 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
SEARCH               : 33
STRING               : 8 36
SUBSTITUTE           : 35
SUM                  : 13
TEXT                 : 36
TIMES                : 3
TODAY                : 19
TRIM                 : 31
UNIQUE               : 18
UPPER                : 30
VALUE                : 37
YEAR                 : 21
error                : 

Nonterminals, with rules where they appear

arguments            : 13 14 15 16 17 18 24 43
cell_range           : 10
cell_ref             : 9
expression           : 1 1 2 2 3 3 4 4 5 5 6 21 22 23 25 26 27 28 29 30 31 32 32 33 33 34 34 35 35 35 36 37 38 39 40 40 42 43 44 0

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression POWER expression
    (6) expression -> . LPAREN expression RPAREN
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . cell_ref
    (10) expression -> . cell_range
    (13) expression -> . SUM LPAREN arguments RPAREN
    (14) expression -> . AVERAGE LPAREN arguments RPAREN
    (15) expression -> . COUNT LPAREN arguments RPAREN
    (16) expression -> . MAX LPAREN arguments RPAREN
    (17) expression -> . MIN LPAREN arguments RPAREN
    (18) expression -> . UNIQUE LPAREN arguments RPAREN
    (19) expression -> . TODAY LPAREN RPAREN
    (20) expression -> . NOW LPAREN RPAREN
    (21) expression -> . YEAR LPAREN expression RPAREN
    (22) expression -> . MONTH LPAREN expression RPAREN
    (23) expression -> . DAY LPAREN expression RPAREN
    (24) expression -> . CONCATENATE LPAREN arguments RPAREN
    (25) expression -> . LEFT LPAREN expression COMMA NUMBER RPAREN
    (26) expression -> . RIGHT LPAREN expression COMMA NUMBER RPAREN
    (27) expression -> . MID LPAREN expression COMMA NUMBER COMMA NUMBER RPAREN
    (28) expression -> . LEN LPAREN expression RPAREN
    (29) expression -> . LOWER LPAREN expression RPAREN
    (30) expression -> . UPPER LPAREN expression RPAREN
    (31) expression -> . TRIM LPAREN expression RPAREN
    (32) expression -> . FIND LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (33) expression -> . SEARCH LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (34) expression -> . REPLACE LPAREN expression COMMA NUMBER COMMA NUMBER COMMA expression RPAREN
    (35) expression -> . SUBSTITUTE LPAREN expression COMMA expression COMMA expression COMMA NUMBER RPAREN
    (36) expression -> . TEXT LPAREN expression COMMA STRING RPAREN
    (37) expression -> . VALUE LPAREN expression RPAREN
    (38) expression -> . PROPER LPAREN expression RPAREN
    (39) expression -> . REPT LPAREN expression COMMA NUMBER RPAREN
    (40) expression -> . EXACT LPAREN expression COMMA expression RPAREN
    (41) expression -> . CHAR LPAREN NUMBER RPAREN
    (42) expression -> . CODE LPAREN expression RPAREN
    (11) cell_ref -> . CELL_REF
    (12) cell_range -> . CELL_REF COLON CELL_REF

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 3
    STRING          shift and go to state 4
    SUM             shift and go to state 7
    AVERAGE         shift and go to state 8
    COUNT           shift and go to state 9
    MAX             shift and go to state 10
    MIN             shift and go to state 11
    UNIQUE          shift and go to state 12
    TODAY           shift and go to state 13
    NOW             shift and go to state 14
    YEAR            shift and go to state 15
    MONTH           shift and go to state 16
    DAY             shift and go to state 17
    CONCATENATE     shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    MID             shift and go to state 21
    LEN             shift and go to state 22
    LOWER           shift and go to state 23
    UPPER           shift and go to state 24
    TRIM            shift and go to state 25
    FIND            shift and go to state 26
    SEARCH          shift and go to state 27
    REPLACE         shift and go to state 28
    SUBSTITUTE      shift and go to state 29
    TEXT            shift and go to state 30
    VALUE           shift and go to state 31
    PROPER          shift and go to state 32
    REPT            shift and go to state 33
    EXACT           shift and go to state 34
    CHAR            shift and go to state 35
    CODE            shift and go to state 36
    CELL_REF        shift and go to state 37

    expression                     shift and go to state 1
    cell_ref                       shift and go to state 5
    cell_range                     shift and go to state 6

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS expression
    (2) expression -> expression . MINUS expression
    (3) expression -> expression . TIMES expression
    (4) expression -> expression . DIVIDE expression
    (5) expression -> expression . POWER expression

    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    TIMES           shift and go to state 40
    DIVIDE          shift and go to state 41
    POWER           shift and go to state 42


state 2

    (6) expression -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression POWER expression
    (6) expression -> . LPAREN expression RPAREN
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . cell_ref
    (10) expression -> . cell_range
    (13) expression -> . SUM LPAREN arguments RPAREN
    (14) expression -> . AVERAGE LPAREN arguments RPAREN
    (15) expression -> . COUNT LPAREN arguments RPAREN
    (16) expression -> . MAX LPAREN arguments RPAREN
    (17) expression -> . MIN LPAREN arguments RPAREN
    (18) expression -> . UNIQUE LPAREN arguments RPAREN
    (19) expression -> . TODAY LPAREN RPAREN
    (20) expression -> . NOW LPAREN RPAREN
    (21) expression -> . YEAR LPAREN expression RPAREN
    (22) expression -> . MONTH LPAREN expression RPAREN
    (23) expression -> . DAY LPAREN expression RPAREN
    (24) expression -> . CONCATENATE LPAREN arguments RPAREN
    (25) expression -> . LEFT LPAREN expression COMMA NUMBER RPAREN
    (26) expression -> . RIGHT LPAREN expression COMMA NUMBER RPAREN
    (27) expression -> . MID LPAREN expression COMMA NUMBER COMMA NUMBER RPAREN
    (28) expression -> . LEN LPAREN expression RPAREN
    (29) expression -> . LOWER LPAREN expression RPAREN
    (30) expression -> . UPPER LPAREN expression RPAREN
    (31) expression -> . TRIM LPAREN expression RPAREN
    (32) expression -> . FIND LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (33) expression -> . SEARCH LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (34) expression -> . REPLACE LPAREN expression COMMA NUMBER COMMA NUMBER COMMA expression RPAREN
    (35) expression -> . SUBSTITUTE LPAREN expression COMMA expression COMMA expression COMMA NUMBER RPAREN
    (36) expression -> . TEXT LPAREN expression COMMA STRING RPAREN
    (37) expression -> . VALUE LPAREN expression RPAREN
    (38) expression -> . PROPER LPAREN expression RPAREN
    (39) expression -> . REPT LPAREN expression COMMA NUMBER RPAREN
    (40) expression -> . EXACT LPAREN expression COMMA expression RPAREN
    (41) expression -> . CHAR LPAREN NUMBER RPAREN
    (42) expression -> . CODE LPAREN expression RPAREN
    (11) cell_ref -> . CELL_REF
    (12) cell_range -> . CELL_REF COLON CELL_REF

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 3
    STRING          shift and go to state 4
    SUM             shift and go to state 7
    AVERAGE         shift and go to state 8
    COUNT           shift and go to state 9
    MAX             shift and go to state 10
    MIN             shift and go to state 11
    UNIQUE          shift and go to state 12
    TODAY           shift and go to state 13
    NOW             shift and go to state 14
    YEAR            shift and go to state 15
    MONTH           shift and go to state 16
    DAY             shift and go to state 17
    CONCATENATE     shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    MID             shift and go to state 21
    LEN             shift and go to state 22
    LOWER           shift and go to state 23
    UPPER           shift and go to state 24
    TRIM            shift and go to state 25
    FIND            shift and go to state 26
    SEARCH          shift and go to state 27
    REPLACE         shift and go to state 28
    SUBSTITUTE      shift and go to state 29
    TEXT            shift and go to state 30
    VALUE           shift and go to state 31
    PROPER          shift and go to state 32
    REPT            shift and go to state 33
    EXACT           shift and go to state 34
    CHAR            shift and go to state 35
    CODE            shift and go to state 36
    CELL_REF        shift and go to state 37

    expression                     shift and go to state 43
    cell_ref                       shift and go to state 5
    cell_range                     shift and go to state 6

state 3

    (7) expression -> NUMBER .

    PLUS            reduce using rule 7 (expression -> NUMBER .)
    MINUS           reduce using rule 7 (expression -> NUMBER .)
    TIMES           reduce using rule 7 (expression -> NUMBER .)
    DIVIDE          reduce using rule 7 (expression -> NUMBER .)
    POWER           reduce using rule 7 (expression -> NUMBER .)
    $end            reduce using rule 7 (expression -> NUMBER .)
    RPAREN          reduce using rule 7 (expression -> NUMBER .)
    COMMA           reduce using rule 7 (expression -> NUMBER .)


state 4

    (8) expression -> STRING .

    PLUS            reduce using rule 8 (expression -> STRING .)
    MINUS           reduce using rule 8 (expression -> STRING .)
    TIMES           reduce using rule 8 (expression -> STRING .)
    DIVIDE          reduce using rule 8 (expression -> STRING .)
    POWER           reduce using rule 8 (expression -> STRING .)
    $end            reduce using rule 8 (expression -> STRING .)
    RPAREN          reduce using rule 8 (expression -> STRING .)
    COMMA           reduce using rule 8 (expression -> STRING .)


state 5

    (9) expression -> cell_ref .

    PLUS            reduce using rule 9 (expression -> cell_ref .)
    MINUS           reduce using rule 9 (expression -> cell_ref .)
    TIMES           reduce using rule 9 (expression -> cell_ref .)
    DIVIDE          reduce using rule 9 (expression -> cell_ref .)
    POWER           reduce using rule 9 (expression -> cell_ref .)
    $end            reduce using rule 9 (expression -> cell_ref .)
    RPAREN          reduce using rule 9 (expression -> cell_ref .)
    COMMA           reduce using rule 9 (expression -> cell_ref .)


state 6

    (10) expression -> cell_range .

    PLUS            reduce using rule 10 (expression -> cell_range .)
    MINUS           reduce using rule 10 (expression -> cell_range .)
    TIMES           reduce using rule 10 (expression -> cell_range .)
    DIVIDE          reduce using rule 10 (expression -> cell_range .)
    POWER           reduce using rule 10 (expression -> cell_range .)
    $end            reduce using rule 10 (expression -> cell_range .)
    RPAREN          reduce using rule 10 (expression -> cell_range .)
    COMMA           reduce using rule 10 (expression -> cell_range .)


state 7

    (13) expression -> SUM . LPAREN arguments RPAREN

    LPAREN          shift and go to state 44


state 8

    (14) expression -> AVERAGE . LPAREN arguments RPAREN

    LPAREN          shift and go to state 45


state 9

    (15) expression -> COUNT . LPAREN arguments RPAREN

    LPAREN          shift and go to state 46


state 10

    (16) expression -> MAX . LPAREN arguments RPAREN

    LPAREN          shift and go to state 47


state 11

    (17) expression -> MIN . LPAREN arguments RPAREN

    LPAREN          shift and go to state 48


state 12

    (18) expression -> UNIQUE . LPAREN arguments RPAREN

    LPAREN          shift and go to state 49


state 13

    (19) expression -> TODAY . LPAREN RPAREN

    LPAREN          shift and go to state 50


state 14

    (20) expression -> NOW . LPAREN RPAREN

    LPAREN          shift and go to state 51


state 15

    (21) expression -> YEAR . LPAREN expression RPAREN

    LPAREN          shift and go to state 52


state 16

    (22) expression -> MONTH . LPAREN expression RPAREN

    LPAREN          shift and go to state 53


state 17

    (23) expression -> DAY . LPAREN expression RPAREN

    LPAREN          shift and go to state 54


state 18

    (24) expression -> CONCATENATE . LPAREN arguments RPAREN

    LPAREN          shift and go to state 55


state 19

    (25) expression -> LEFT . LPAREN expression COMMA NUMBER RPAREN

    LPAREN          shift and go to state 56


state 20

    (26) expression -> RIGHT . LPAREN expression COMMA NUMBER RPAREN

    LPAREN          shift and go to state 57


state 21

    (27) expression -> MID . LPAREN expression COMMA NUMBER COMMA NUMBER RPAREN

    LPAREN          shift and go to state 58


state 22

    (28) expression -> LEN . LPAREN expression RPAREN

    LPAREN          shift and go to state 59


state 23

    (29) expression -> LOWER . LPAREN expression RPAREN

    LPAREN          shift and go to state 60


state 24

    (30) expression -> UPPER . LPAREN expression RPAREN

    LPAREN          shift and go to state 61


state 25

    (31) expression -> TRIM . LPAREN expression RPAREN

    LPAREN          shift and go to state 62


state 26

    (32) expression -> FIND . LPAREN expression COMMA expression COMMA NUMBER RPAREN

    LPAREN          shift and go to state 63


state 27

    (33) expression -> SEARCH . LPAREN expression COMMA expression COMMA NUMBER RPAREN

    LPAREN          shift and go to state 64


state 28

    (34) expression -> REPLACE . LPAREN expression COMMA NUMBER COMMA NUMBER COMMA expression RPAREN

    LPAREN          shift and go to state 65


state 29

    (35) expression -> SUBSTITUTE . LPAREN expression COMMA expression COMMA expression COMMA NUMBER RPAREN

    LPAREN          shift and go to state 66


state 30

    (36) expression -> TEXT . LPAREN expression COMMA STRING RPAREN

    LPAREN          shift and go to state 67


state 31

    (37) expression -> VALUE . LPAREN expression RPAREN

    LPAREN          shift and go to state 68


state 32

    (38) expression -> PROPER . LPAREN expression RPAREN

    LPAREN          shift and go to state 69


state 33

    (39) expression -> REPT . LPAREN expression COMMA NUMBER RPAREN

    LPAREN          shift and go to state 70


state 34

    (40) expression -> EXACT . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 71


state 35

    (41) expression -> CHAR . LPAREN NUMBER RPAREN

    LPAREN          shift and go to state 72


state 36

    (42) expression -> CODE . LPAREN expression RPAREN

    LPAREN          shift and go to state 73


state 37

    (11) cell_ref -> CELL_REF .
    (12) cell_range -> CELL_REF . COLON CELL_REF

    PLUS            reduce using rule 11 (cell_ref -> CELL_REF .)
    MINUS           reduce using rule 11 (cell_ref -> CELL_REF .)
    TIMES           reduce using rule 11 (cell_ref -> CELL_REF .)
    DIVIDE          reduce using rule 11 (cell_ref -> CELL_REF .)
    POWER           reduce using rule 11 (cell_ref -> CELL_REF .)
    $end            reduce using rule 11 (cell_ref -> CELL_REF .)
    RPAREN          reduce using rule 11 (cell_ref -> CELL_REF .)
    COMMA           reduce using rule 11 (cell_ref -> CELL_REF .)
    COLON           shift and go to state 74


state 38

    (1) expression -> expression PLUS . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression POWER expression
    (6) expression -> . LPAREN expression RPAREN
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . cell_ref
    (10) expression -> . cell_range
    (13) expression -> . SUM LPAREN arguments RPAREN
    (14) expression -> . AVERAGE LPAREN arguments RPAREN
    (15) expression -> . COUNT LPAREN arguments RPAREN
    (16) expression -> . MAX LPAREN arguments RPAREN
    (17) expression -> . MIN LPAREN arguments RPAREN
    (18) expression -> . UNIQUE LPAREN arguments RPAREN
    (19) expression -> . TODAY LPAREN RPAREN
    (20) expression -> . NOW LPAREN RPAREN
    (21) expression -> . YEAR LPAREN expression RPAREN
    (22) expression -> . MONTH LPAREN expression RPAREN
    (23) expression -> . DAY LPAREN expression RPAREN
    (24) expression -> . CONCATENATE LPAREN arguments RPAREN
    (25) expression -> . LEFT LPAREN expression COMMA NUMBER RPAREN
    (26) expression -> . RIGHT LPAREN expression COMMA NUMBER RPAREN
    (27) expression -> . MID LPAREN expression COMMA NUMBER COMMA NUMBER RPAREN
    (28) expression -> . LEN LPAREN expression RPAREN
    (29) expression -> . LOWER LPAREN expression RPAREN
    (30) expression -> . UPPER LPAREN expression RPAREN
    (31) expression -> . TRIM LPAREN expression RPAREN
    (32) expression -> . FIND LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (33) expression -> . SEARCH LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (34) expression -> . REPLACE LPAREN expression COMMA NUMBER COMMA NUMBER COMMA expression RPAREN
    (35) expression -> . SUBSTITUTE LPAREN expression COMMA expression COMMA expression COMMA NUMBER RPAREN
    (36) expression -> . TEXT LPAREN expression COMMA STRING RPAREN
    (37) expression -> . VALUE LPAREN expression RPAREN
    (38) expression -> . PROPER LPAREN expression RPAREN
    (39) expression -> . REPT LPAREN expression COMMA NUMBER RPAREN
    (40) expression -> . EXACT LPAREN expression COMMA expression RPAREN
    (41) expression -> . CHAR LPAREN NUMBER RPAREN
    (42) expression -> . CODE LPAREN expression RPAREN
    (11) cell_ref -> . CELL_REF
    (12) cell_range -> . CELL_REF COLON CELL_REF

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 3
    STRING          shift and go to state 4
    SUM             shift and go to state 7
    AVERAGE         shift and go to state 8
    COUNT           shift and go to state 9
    MAX             shift and go to state 10
    MIN             shift and go to state 11
    UNIQUE          shift and go to state 12
    TODAY           shift and go to state 13
    NOW             shift and go to state 14
    YEAR            shift and go to state 15
    MONTH           shift and go to state 16
    DAY             shift and go to state 17
    CONCATENATE     shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    MID             shift and go to state 21
    LEN             shift and go to state 22
    LOWER           shift and go to state 23
    UPPER           shift and go to state 24
    TRIM            shift and go to state 25
    FIND            shift and go to state 26
    SEARCH          shift and go to state 27
    REPLACE         shift and go to state 28
    SUBSTITUTE      shift and go to state 29
    TEXT            shift and go to state 30
    VALUE           shift and go to state 31
    PROPER          shift and go to state 32
    REPT            shift and go to state 33
    EXACT           shift and go to state 34
    CHAR            shift and go to state 35
    CODE            shift and go to state 36
    CELL_REF        shift and go to state 37

    expression                     shift and go to state 75
    cell_ref                       shift and go to state 5
    cell_range                     shift and go to state 6

state 39

    (2) expression -> expression MINUS . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression POWER expression
    (6) expression -> . LPAREN expression RPAREN
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . cell_ref
    (10) expression -> . cell_range
    (13) expression -> . SUM LPAREN arguments RPAREN
    (14) expression -> . AVERAGE LPAREN arguments RPAREN
    (15) expression -> . COUNT LPAREN arguments RPAREN
    (16) expression -> . MAX LPAREN arguments RPAREN
    (17) expression -> . MIN LPAREN arguments RPAREN
    (18) expression -> . UNIQUE LPAREN arguments RPAREN
    (19) expression -> . TODAY LPAREN RPAREN
    (20) expression -> . NOW LPAREN RPAREN
    (21) expression -> . YEAR LPAREN expression RPAREN
    (22) expression -> . MONTH LPAREN expression RPAREN
    (23) expression -> . DAY LPAREN expression RPAREN
    (24) expression -> . CONCATENATE LPAREN arguments RPAREN
    (25) expression -> . LEFT LPAREN expression COMMA NUMBER RPAREN
    (26) expression -> . RIGHT LPAREN expression COMMA NUMBER RPAREN
    (27) expression -> . MID LPAREN expression COMMA NUMBER COMMA NUMBER RPAREN
    (28) expression -> . LEN LPAREN expression RPAREN
    (29) expression -> . LOWER LPAREN expression RPAREN
    (30) expression -> . UPPER LPAREN expression RPAREN
    (31) expression -> . TRIM LPAREN expression RPAREN
    (32) expression -> . FIND LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (33) expression -> . SEARCH LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (34) expression -> . REPLACE LPAREN expression COMMA NUMBER COMMA NUMBER COMMA expression RPAREN
    (35) expression -> . SUBSTITUTE LPAREN expression COMMA expression COMMA expression COMMA NUMBER RPAREN
    (36) expression -> . TEXT LPAREN expression COMMA STRING RPAREN
    (37) expression -> . VALUE LPAREN expression RPAREN
    (38) expression -> . PROPER LPAREN expression RPAREN
    (39) expression -> . REPT LPAREN expression COMMA NUMBER RPAREN
    (40) expression -> . EXACT LPAREN expression COMMA expression RPAREN
    (41) expression -> . CHAR LPAREN NUMBER RPAREN
    (42) expression -> . CODE LPAREN expression RPAREN
    (11) cell_ref -> . CELL_REF
    (12) cell_range -> . CELL_REF COLON CELL_REF

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 3
    STRING          shift and go to state 4
    SUM             shift and go to state 7
    AVERAGE         shift and go to state 8
    COUNT           shift and go to state 9
    MAX             shift and go to state 10
    MIN             shift and go to state 11
    UNIQUE          shift and go to state 12
    TODAY           shift and go to state 13
    NOW             shift and go to state 14
    YEAR            shift and go to state 15
    MONTH           shift and go to state 16
    DAY             shift and go to state 17
    CONCATENATE     shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    MID             shift and go to state 21
    LEN             shift and go to state 22
    LOWER           shift and go to state 23
    UPPER           shift and go to state 24
    TRIM            shift and go to state 25
    FIND            shift and go to state 26
    SEARCH          shift and go to state 27
    REPLACE         shift and go to state 28
    SUBSTITUTE      shift and go to state 29
    TEXT            shift and go to state 30
    VALUE           shift and go to state 31
    PROPER          shift and go to state 32
    REPT            shift and go to state 33
    EXACT           shift and go to state 34
    CHAR            shift and go to state 35
    CODE            shift and go to state 36
    CELL_REF        shift and go to state 37

    expression                     shift and go to state 76
    cell_ref                       shift and go to state 5
    cell_range                     shift and go to state 6

state 40

    (3) expression -> expression TIMES . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression POWER expression
    (6) expression -> . LPAREN expression RPAREN
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . cell_ref
    (10) expression -> . cell_range
    (13) expression -> . SUM LPAREN arguments RPAREN
    (14) expression -> . AVERAGE LPAREN arguments RPAREN
    (15) expression -> . COUNT LPAREN arguments RPAREN
    (16) expression -> . MAX LPAREN arguments RPAREN
    (17) expression -> . MIN LPAREN arguments RPAREN
    (18) expression -> . UNIQUE LPAREN arguments RPAREN
    (19) expression -> . TODAY LPAREN RPAREN
    (20) expression -> . NOW LPAREN RPAREN
    (21) expression -> . YEAR LPAREN expression RPAREN
    (22) expression -> . MONTH LPAREN expression RPAREN
    (23) expression -> . DAY LPAREN expression RPAREN
    (24) expression -> . CONCATENATE LPAREN arguments RPAREN
    (25) expression -> . LEFT LPAREN expression COMMA NUMBER RPAREN
    (26) expression -> . RIGHT LPAREN expression COMMA NUMBER RPAREN
    (27) expression -> . MID LPAREN expression COMMA NUMBER COMMA NUMBER RPAREN
    (28) expression -> . LEN LPAREN expression RPAREN
    (29) expression -> . LOWER LPAREN expression RPAREN
    (30) expression -> . UPPER LPAREN expression RPAREN
    (31) expression -> . TRIM LPAREN expression RPAREN
    (32) expression -> . FIND LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (33) expression -> . SEARCH LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (34) expression -> . REPLACE LPAREN expression COMMA NUMBER COMMA NUMBER COMMA expression RPAREN
    (35) expression -> . SUBSTITUTE LPAREN expression COMMA expression COMMA expression COMMA NUMBER RPAREN
    (36) expression -> . TEXT LPAREN expression COMMA STRING RPAREN
    (37) expression -> . VALUE LPAREN expression RPAREN
    (38) expression -> . PROPER LPAREN expression RPAREN
    (39) expression -> . REPT LPAREN expression COMMA NUMBER RPAREN
    (40) expression -> . EXACT LPAREN expression COMMA expression RPAREN
    (41) expression -> . CHAR LPAREN NUMBER RPAREN
    (42) expression -> . CODE LPAREN expression RPAREN
    (11) cell_ref -> . CELL_REF
    (12) cell_range -> . CELL_REF COLON CELL_REF

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 3
    STRING          shift and go to state 4
    SUM             shift and go to state 7
    AVERAGE         shift and go to state 8
    COUNT           shift and go to state 9
    MAX             shift and go to state 10
    MIN             shift and go to state 11
    UNIQUE          shift and go to state 12
    TODAY           shift and go to state 13
    NOW             shift and go to state 14
    YEAR            shift and go to state 15
    MONTH           shift and go to state 16
    DAY             shift and go to state 17
    CONCATENATE     shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    MID             shift and go to state 21
    LEN             shift and go to state 22
    LOWER           shift and go to state 23
    UPPER           shift and go to state 24
    TRIM            shift and go to state 25
    FIND            shift and go to state 26
    SEARCH          shift and go to state 27
    REPLACE         shift and go to state 28
    SUBSTITUTE      shift and go to state 29
    TEXT            shift and go to state 30
    VALUE           shift and go to state 31
    PROPER          shift and go to state 32
    REPT            shift and go to state 33
    EXACT           shift and go to state 34
    CHAR            shift and go to state 35
    CODE            shift and go to state 36
    CELL_REF        shift and go to state 37

    expression                     shift and go to state 77
    cell_ref                       shift and go to state 5
    cell_range                     shift and go to state 6

state 41

    (4) expression -> expression DIVIDE . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVIDE expression
    (5) expression -> . expression POWER expression
    (6) expression -> . LPAREN expression RPAREN
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (9) expression -> . cell_ref
    (10) expression -> . cell_range
    (13) expression -> . SUM LPAREN arguments RPAREN
    (14) expression -> . AVERAGE LPAREN arguments RPAREN
    (15) expression -> . COUNT LPAREN arguments RPAREN
    (16) expression -> . MAX LPAREN arguments RPAREN
    (17) expression -> . MIN LPAREN arguments RPAREN
    (18) expression -> . UNIQUE LPAREN arguments RPAREN
    (19) expression -> . TODAY LPAREN RPAREN
    (20) expression -> . NOW LPAREN RPAREN
    (21) expression -> . YEAR LPAREN expression RPAREN
    (22) expression -> . MONTH LPAREN expression RPAREN
    (23) expression -> . DAY LPAREN expression RPAREN
    (24) expression -> . CONCATENATE LPAREN arguments RPAREN
    (25) expression -> . LEFT LPAREN expression COMMA NUMBER RPAREN
    (26) expression -> . RIGHT LPAREN expression COMMA NUMBER RPAREN
    (27) expression -> . MID LPAREN expression COMMA NUMBER COMMA NUMBER RPAREN
    (28) expression -> . LEN LPAREN expression RPAREN
    (29) expression -> . LOWER LPAREN expression RPAREN
    (30) expression -> . UPPER LPAREN expression RPAREN
    (31) expression -> . TRIM LPAREN expression RPAREN
    (32) expression -> . FIND LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (33) expression -> . SEARCH LPAREN expression COMMA expression COMMA NUMBER RPAREN
    (34) expression -> . REPLACE LPAREN expression COMMA NUMBER COMMA NUMBER COMMA expression RPAREN
    (35) expression -> . SUBSTITUTE LPAREN expression COMMA expression COMMA expression COMMA NUMBER RPAREN
    (36) expression -> . TEXT LPAREN expression COMMA STRING RPAREN
    (37) expression -> . VALUE LPAREN expression RPAREN
    (38) expression -> . PROPER LPAREN expression RPAREN
    (39) expression -> . REPT LPAREN expression COMMA NUMBER RPAREN
    (40) expression -> . EXACT LPAREN expression COMMA expression RPAREN
    (41) expression -> . CHAR LPAREN NUMBER RPAREN
    (42) expression -> . CODE LPAREN expression RPAREN
    (11) cell_ref -> . CELL_REF
    (12) cell_range -> . CELL_REF COLON CELL_REF
